# globa-flux-rust

./: .gitignore  AGENTS.md  Cargo.toml  README.md  vercel.json
api/: geo_monitor.rs  geo_monitor_dispatch.rs
api/billing/subscription/: status.rs
api/chat/: risk_check.rs
api/decision/: today.rs
api/jobs/daily/: dispatch.rs
api/jobs/weekly/: dispatch.rs
api/jobs/worker/: tick.rs
api/oauth/youtube/: exchange.rs  router.rs  start.rs  status.rs
api/tenants/: ai_settings.rs  ensure_trial.rs  llm_settings.rs
api/usage/: chat_risk_check.rs
api/usage/chat_risk_check/: consume.rs  today.rs
api/webhooks/: billing.rs
docs/design/: README.md  Summarize.md  Technical_PRD.md  findings.md  progress.md  task_plan.md
docs/plans/: 2026-01-21-youtube-backfill-tidb.md  2026-01-23-llm-settings-hobby-limit-design.md  2026-01-24-vercel-function-count-to-8.md  README.md
docs/plans/_archive/: 2026-01-21-weekly-replay-gate.md  2026-01-21-youtube-backfill-tidb.md  2026-01-23-gemini-db-only-global-model.md  README.md
src/: backfill.rs  cost.rs  db.rs  decision_engine.rs  geo_monitor.rs  guardrails.rs  http_client.rs  lib.rs  outcome_engine.rs  reach_reporting.rs  replay_gate.rs  secrets.rs  sse.rs  youtube_alerts.rs
src/providers/: gemini.rs  mod.rs  openai.rs  youtube.rs  youtube_analytics.rs  youtube_api.rs  youtube_partner.rs  youtube_reporting.rs  youtube_videos.rs
